--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -38,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "csp-html-webpack-plugin": "^5.1.0",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8"
   }
